# ProcesamientoImagenes

./: .gitignore  .~lock.Reporte_Taller.docx#  Makefile  README.md  Reporte_Taller.docx  Reporte_Taller.md  conversiones.cpp  matriz.cpp  salida_consola.txt  solucion  solucion.cpp  solucion_headless  solucion_headless.cpp
taller_march16/: CMakeLists.txt  README.md
taller_march16/include/: filtros.h
taller_march16/src/: canny.cpp  laplacian.cpp  log_filter.cpp  main.cpp  scharr.cpp  sobel.cpp  sobel_magnitudes.cpp  zero_crossing.cpp
